# discord-bot

./: CMakeLists.txt  CMakeSettings.json  LabyrinthBot.cpp  Makefile  QasinoBot.cpp  QasinoHeader.h  README.md  bignumber.h  cmake_install.cmake  discord.cpp  discord.h
asio-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
asio-download/asio-download-prefix/tmp/: asio-download-download.cmake  asio-download-gitclone.cmake  asio-download-gitupdate.cmake  asio-download-mkdirs.cmake  asio-download-update.cmake
cmake-3.19.4-win64-x64/man/man1/: cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake-3.19.4-win64-x64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
cpr-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpr-download/cpr-download-prefix/tmp/: cpr-download-download-repoinfo.txt  cpr-download-download.cmake  cpr-download-gitclone.cmake  cpr-download-gitupdate.cmake  cpr-download-mkdirs.cmake  cpr-download-update.cmake
websocketpp-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
websocketpp-download/websocketpp-download-prefix/tmp/: websocketpp-download-download.cmake  websocketpp-download-gitclone.cmake  websocketpp-download-gitupdate.cmake  (+2 more)
(+1726 files in other folders)
